front/fix: homepage spacing more consistent

--- a/front/src/components/Home/styles.scss
+++ b/front/src/components/Home/styles.scss
@@ -11,7 +11,7 @@
       background-repeat: no-repeat;
       background-position: bottom;
       background-size: 100% auto;
-      padding-bottom: 9rem;
+      padding: 8rem 0 13rem 0;
     }
     &:nth-of-type(2n) {
       background: rgba(5, 106, 147, 0.32);
@@ -22,7 +22,7 @@
       background-repeat: no-repeat;
       background-position: top;
       background-size: 100% auto;
-      padding: 7rem 0;
+      padding: 13rem 0 20rem 0;
     }
     /* odd articles (1, 3, 5) should be with white bg 
     * + slightly shifted to left 
@@ -41,10 +41,9 @@
     &__wrapper {
       display: flex;
       margin: 0 24% 0 auto;
-      max-width: 800px;
+      max-width: 980px;
       justify-content: space-between;
       align-items: center;
-      padding: 7rem 1rem;
       line-height: 1.4rem;
 
       &__text {
@@ -77,9 +76,6 @@
         max-height: 14rem;
       }
     }
-    &:last-child {
-      padding-bottom: 15rem;
-    }
   }
 
   @media screen and (max-width: 60rem) {
@@ -94,7 +90,7 @@
     &__article {
       &:nth-of-type(1) {
         background-size: auto 5%;
-        padding-bottom: 9rem;
+        padding-bottom: 7rem;
       }
       &:nth-of-type(2n) {
         background: rgba(5, 106, 147, 0.32);
